[package]
name = "bark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
notify-rust = { version = "4.10.0", features = ["chrono"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.112"
clokwerk = "0.4.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-timer = "0.2.13"
toml_edit = { version = "0.22.4", features = ["serde"] }
toml = "0.8.10"
cron = "0.12.0"
